# payments-rs

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 01_init_schema.sql
src/: main.rs
src/api/: accounts.rs  auth.rs  mod.rs  transactions.rs  users.rs
src/config/: mod.rs
src/db/: accounts.rs  decimal.rs  mod.rs  transactions.rs  users.rs
src/handlers/: accounts.rs  auth.rs  mod.rs  transactions.rs  users.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: account.rs  mod.rs  transaction.rs  user.rs
src/routes/: health.rs  mod.rs
src/services/: account_service.rs  mod.rs  transaction_service.rs
src/tests/: mod.rs
src/utils/: error.rs  jwt.rs  mod.rs
