[package]
name = "payments-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
tokio = { version = "1", features = ["full"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "macros", "rust_decimal"] }
deadpool-postgres = { version = "0.10", features = ["serde"] }
tokio-postgres = { version = "0.7" }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
rust_decimal_macros = "1.30"
bytes = "1.5"

# Authentication
jsonwebtoken = "8.3"
argon2 = "0.5"
rand = "0.8"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
dotenv = "0.15"
rust_decimal = { version = "1.30", features = ["serde"] }
headers = "0.4.0"

[dev-dependencies]
mockall = "0.11"
rstest = "0.18"
tokio-test = "0.4"
